--- a/package.json
+++ b/package.json
@@ -4,13 +4,35 @@
   "private": true,
   "homepage": "https://VasilenkoYurii.github.io/delivery-app/",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.4",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.6",
+    "formik": "^2.2.9",
+    "nanoid": "^4.0.1",
+    "notiflix": "^3.2.6",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-particles": "^2.9.3",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-tsparticles": "^2.9.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "tsparticles": "^2.9.3",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
