--- a/package.json
+++ b/package.json
@@ -32,10 +32,19 @@
     "redux-persist": "^6.0.0",
     "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.3",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "^16.0.3",
+    "express": "4.17.1",
+    "joi": "^17.9.2",
+    "mongoose": "^7.1.1",
+    "morgan": "1.10.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start-server && npm run start-client",
+    "start-client": "react-scripts start",
+    "start-server": "cd server && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
