--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "morgan": "1.10.0"
   },
   "scripts": {
-    "start": "npm run start-server && npm run start-client",
+    "start": "npm run start-client && npm run start-server",
     "start-client": "react-scripts start",
     "start-server": "cd server && node server.js",
     "build": "react-scripts build",
