--- a/package.json
+++ b/package.json
@@ -3,69 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://VasilenkoYurii.github.io/delivery-app/",
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@redux-devtools/extension": "^3.2.5",
-    "@reduxjs/toolkit": "^1.9.4",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.6",
-    "formik": "^2.2.9",
-    "nanoid": "^4.0.1",
-    "notiflix": "^3.2.6",
-    "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.8.0",
-    "react-loader-spinner": "^5.3.4",
-    "react-particles": "^2.9.3",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.9.3",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "tsparticles": "^2.9.3",
-    "web-vitals": "^2.1.3",
-    "yup": "^1.0.2",
-    "cors": "2.8.5",
-    "cross-env": "7.0.3",
-    "dotenv": "^16.0.3",
-    "express": "4.17.1",
-    "joi": "^17.9.2",
-    "mongoose": "^7.1.1",
-    "morgan": "1.10.0"
+  "repository": {
+    "type": "git",
+    "url": "https://VasilenkoYurii.github.io/delivery-app/"
   },
   "scripts": {
-    "start": "npm run start-client && npm run start-server",
-    "start-client": "react-scripts start",
-    "start-server": "cd server && node server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "client-install": "cd client && npm install",
+    "client-start": "cd client && npm start",
+    "server-install": "cd server && npm install",
+    "server-start": "cd server && npm start",
+    "install-all": "npm run client-install && npm run server-install",
+    "start": "concurrently \"npm run client-start\" \"npm run server-start\""
   }
 }
