--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
+    "fs": "^0.0.1-security",
     "joi": "^17.9.2",
     "mongoose": "^7.1.1",
     "morgan": "1.10.0",
