--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "client-install": "cd client && npm install",
     "server-install": "cd server && npm install",
     "start": "concurrently \"npm run client-install\" \"npm run server-install\" && node server/server.js"
+  },
+  "dependencies": {
+    "concurrently": "^6.2.0"
   }
 }
