--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "client-install": "cd client && npm install",
-    "client-build": "cd client && npm run build",
     "server-install": "cd server && npm install",
-    "start": "concurrently \"npm run client-install\" \"npm run client build\" \"npm run server-install\" && node server/server.js"
+    "start": "concurrently \"npm run client-install\" \"npm run server-install\" && node server/server.js",
+    "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
     "concurrently": "^6.2.0"
