--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "url": "https://VasilenkoYurii.github.io/delivery-app/"
   },
   "scripts": {
+    "heroku-prebuild": "concurrently \"npm run client-install\" \"npm run server-install\"",
+    "heroku-postbuild": "cd client && npm run build",
     "client-install": "cd client && npm install",
     "server-install": "cd server && npm install",
-    "start": "concurrently \"npm run client-install\" \"npm run server-install\" && node server/server.js",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "start": "node server/server.js"
   },
   "dependencies": {
     "concurrently": "^6.2.0"
