--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@react-google-maps/api": "^2.18.1",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.4",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
-    "formik": "^2.2.9",
+    "formik": "^2.4.2",
     "nanoid": "^4.0.1",
     "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
@@ -30,8 +32,9 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "tsparticles": "^2.9.3",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.3",
-    "yup": "^1.0.2"
+    "yup": "^1.2.0"
   },
   "proxy": "http://localhost:3000/",
   "scripts": {
