--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "react",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://VasilenkoYurii.github.io/delivery-app/",
